# pot-app-recognize-plugin-rapid-py

./: README.md  info.json  main.js  main.py  pyproject.toml
.github/workflows/: build.yml
