[project]
name = "plugin-com-pot-app-rapid-py"
version = "3.3.1"
description = "Yet another OCR plugin for pot app"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "rapidocr~=3.3.1",
    "requests",
]


[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
onnxruntime = [
    "onnxruntime>=1.21.0",
]
openvino = [
    "openvino>=2025.0.0",
]
paddle = [
    "paddlepaddle>=3.0.0",
    "setuptools>=78.1.0",
]
torch = [
    "torch>=2.6.0",
]

[tool.uv]
default-groups = ["onnxruntime"]
