[project]
name = "plugin-com-pot-app-rapid-py"
version = "3.7.1"
description = "Yet another OCR plugin for pot app"
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "rapidocr~=3.7.0",
    "requests",
]


[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
onnxruntime = [
    "onnxruntime>=1.21.0",
]
onnxruntime-gpu = [
    "onnxruntime-gpu>=1.21.0",
]
onnxruntime-directml = [
    "onnxruntime-directml>=1.21.0; platform_system == 'Windows'",
]
openvino = [
    "openvino>=2025.0.0",
]
paddle = [
    "paddlepaddle>=3.0.0",
    "setuptools>=78.1.0",
]
torch = [
    "torch>=2.6.0",
]
tensorrt = [
    "tensorrt>=10.13.0; platform_system != 'Darwin'",
    "cuda-bindings>=12.8.0; platform_system != 'Darwin'",
]
mnn = [
    "MNN>=3.0.0",
]

[tool.uv]
default-groups = ["onnxruntime"]
